applications/argocd/whoami-workload-endpoints.yaml
apiVersion: v1
kind: Endpoints

metadata:
  name: whoami-workload
  namespace: argocd

subsets:
  - addresses:
      - ip: 172.18.255.200
    ports:
      - port: 80
