applications/argocd/whoami-workload-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: whoami-workload
  namespace: argocd

spec:
  ports:
    - port: 80
      targetPort: 80
