applications/argocd/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: argocd
  namespace: argocd

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`argocd.local`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80

  tls:
    secretName: argocd-local-tls
