applications/argocd/whoami-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: whoami
  namespace: argocd

spec:
  entryPoints:
    - web

  routes:
    - match: Host(`whoami.dev.local`)
      kind: Rule

      services:
        - name: whoami-workload
          port: 80
